# SPaRC-Gym

./: .gitignore  Dataset_Loader.py  Final_Product.py  LICENCE  LICENSE  README.md  gym_Witness.py  human_play.py  llm_host.py  llm_host_test.py  parse_logs.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
Gym_Env_SPaRC.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
SPaRC_Gym/: SPaRC_Gym.py  __init__.py  register_env.py
SPaRC_Gym/render/: __init__.py  human_renderer.py  llm_renderer.py
gymnasium_env/: __init__.py  gym_Witness.py  register_env.py
gymnasium_env_for_SPaRC/: __init__.py  gym_env_for_SPaRC.py  register_env.py
gymnasium_env_for_SPaRC/render/: human_renderer.py
llm_testing/: llm_host.py  parse_logs.py
