[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "SPaRC-Gym"
version = "0.1.9"
description = ""
readme = "README.md"
license = { file = "LICENCE" }
authors = [{ name = "Tobias Mark", email = "tobi09.mark@gmx.net" }]
requires-python = ">=3.9"
dependencies = [
  "gymnasium>=0.28.1",
  "numpy>=1.26.4",
  "pygame>=2.2.0",
  "pyyaml>=5.1",
  "pandas>=2.3.1",
  "huggingface-hub>=0.15.0",
  "fsspec>=2025.7.0",
  "chardet>=5.2.0"
]

[project.entry-points."gymnasium.envs"]
SPaRC-Gym = "SPaRC_Gym.SPaRC_Gym:SPaRC_Gym"

[project.urls]
Repository = "https://github.com/tobiTKM/SPaRC_Gym"

[tool.hatch.build.targets.wheel]
packages = ["SPaRC_Gym"]

[tool.hatch.metadata]
allow-direct-references = true